[package]
name = "nucleobases"
version = "1.1.0" # remember to update html_root_url
authors = [
    "The Open Bio Project",
    "Will Toll <will@wtoll.com>"
]
edition = "2018"
description = "A simple, low-level brick crate for managing nucleobases as data in code"
documentation = "https://docs.rs/nucleobases"
readme = "README.md"
homepage = "https://crates.io/crates/nucleobases"
repository = "https://github.com/Open-DNA/nucleobases"
license = "MIT OR Apache-2.0"
keywords = ["nucleobases", "dna", "genomics"]
